--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,9 @@ pulseaudio (0.9.5-8) UNRELEASED; urgency=low
   * debian/patch: r1434-dont-fail-if-hal-doesn-t-contain-any-devices
     + Added. Don't unload module-hal-detect if HAL doesn't report any devices.
              (Closes: #395893)
+  * debian/patches: Backport DOS attack fixes r1445-1450.
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 23 May 2007 09:41:40 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Thu, 24 May 2007 19:16:36 +0200
 
 pulseaudio (0.9.5-7) unstable; urgency=low
 
