--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pulseaudio (0.9.9-1) unstable; urgency=high
+
+  * New Upstream Version.
+  * Fixes CVE-2008-008: Assert that dropping permissions succeeds.
+  * Priority high because it fixes a security issue.
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 24 Jan 2008 12:44:55 +0100
+
 pulseaudio (0.9.8-2) unstable; urgency=low
 
   * Bump shlibs of libpulse and libpulse-browse. Upstream has started
